--- a/src/pages/LandingPageStyles.css
+++ b/src/pages/LandingPageStyles.css
@@ -5,7 +5,8 @@
     align-items: center;
     height: 80vh;
     width: 100%;
-    background-color: #f3f3f2;
+    /* background-color: #f3f3f2; */
+    background-color: var(--almostwhite);
     color: #333;
     text-align: center;
 }
